# unreal-companion

./: .clang-format  .clinerules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RECAP.md  SECURITY.md  mcp.json  package-lock.json  package.json
.claude/: launch.json  settings.local.json
.github/: FUNDING.yml  REPO_SETUP.md  pull_request_template.md  release-drafter.yml
.tasks/: README.md
.tasks-restructuration/: 01-structure.md  02-agents.md  03-skills.md  04-rules-templates.md  05-memories.md  06-cli.md  07-web-ui.md  08-tests.md  README.md
Docs/: AUDIT-REPORT.md  LOGGING.md  README.md
Python/: CLAUDE.md  README.md  pyproject.toml  unreal_mcp_server.py
Python/tests/: __init__.py  test_helpers.py  test_security.py  test_split_modules.py  test_tools_format.py  test_tools_parameters.py  test_tools_registration.py
Python/tools/: __init__.py  asset_tools.py  blueprint_tools.py  core_tools.py  editor_tools.py  environment_tools.py  foliage_tools.py  geometry_tools.py  graph_tools.py  landscape_tools.py  level_tools.py  light_tools.py  material_tools.py  meshy_tools.py  niagara_tools.py  project_tools.py  python_tools.py  spline_tools.py  viewport_tools.py  widget_tools.py  world_tools.py
Python/utils/: __init__.py  helpers.py  security.py
cli/: CLAUDE.md
frameworks/: CLAUDE.md  README.md  manifest.yaml  suggestions.yaml
scripts/: migrate-workflows-v2.py
web-ui/: .gitignore  CLAUDE.md  README.md  index.html  install.sh  package-lock.json  package.json  setup.sh  start.sh  (+3 more)
(+843 files in other folders)
